--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "Desafio-5-20240229/retro-gaming"]
 	path = Desafio-5-20240229/retro-gaming
 	url = https://github.com/Haap92/Desafio-5-20240229.git
+[submodule "Desafio-6-20240312/retro-gaming"]
+	path = Desafio-6-20240312/retro-gaming
+	url = https://github.com/Haap92/Desafio-6-20240312.git
